2008-10-01  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Don't set Request::supportsPersistentConnection() in HttpConnection
	since this code is also used in AbstractProxyResponseCommand.
	Moved those code to HttpResponse.
	* src/HttpResponse.cc
	* src/HttpResponse.h
	* src/HttpConnection.cc
	* src/HttpConnection.h
	* src/HttpResponseCommand.cc
	* test/HttpResponseTest.cc

2008-09-30  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Fixed compile error with debian mingw32 cross compiler(4.2.1).
	The configuration is minimum: no torrent, no metalink, so there may be
	other compile error on their code.
	* src/a2netcompat.h
	* src/File.cc
	* src/File.h
	* src/SocketCore.cc
	* src/SocketCore.h

2008-09-28  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Made a socket of incoming peer non-blocking.
	* src/PeerListenCommand.cc

2008-09-28  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Fixed the bug that aria2 may send duplicate data to BitTorrent peer if
	whole message data is not sent in one send() call.
	* src/BtPieceMessage.cc
	* src/BtPieceMessage.h
	* src/PeerConnection.cc
	* src/PeerConnection.h
	* src/SimpleBtMessage.cc
	* src/SimpleBtMessage.h
	
2008-09-28  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Fixed the bug that aria2 downloads faster than max-download-limit when
	downloading file using both HTTP(or FTP) and BitTorrent, because aria2
	evaluates speed separatly(HTTP and BiTorrent) against max-download-limit
	, instead of sum of them.
	* src/ActivePeerConnectionCommand.cc
	* src/DefaultBtInteractive.cc
	* src/DownloadCommand.cc
	* src/PeerInteractionCommand.cc
	* src/PeerReceiveHandshakeCommand.cc

2008-09-27  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Fixed the bug that HTTPS download fails.
	* src/AbstractCommand.cc
	* src/AbstractCommand.h
	* src/DownloadCommand.cc
	* src/FtpConnection.cc
	* src/HttpConnection.cc
	* src/HttpRequestCommand.cc
	* src/HttpResponseCommand.cc
	* src/HttpSkipResponseCommand.cc