@@ -1,5 +1,11 @@
 2008-10-01  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>
 
+	Use seek() and SetEndOfFile() for mingw32 build instead of ftruncate(),
+	because mingw32's ftruncate() cannot handle more than 2GB-size file.
+	* src/AbstractDiskWriter.cc
+
+2008-10-01  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>
+
 	Don't set Request::supportsPersistentConnection() in HttpConnection
 	since this code is also used in AbstractProxyResponseCommand.
 	Moved those code to HttpResponse.
